Design HTML a CSS

--- a/magda.html
+++ b/magda.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <img class="Magda" src="fotka-Marketa.jpg" alt="Foto Magdy" />
+    <img class="Magda" src="fotka-Magda.jpg" alt="Foto Magdy" />
   </body>
 </html>
