--- a/index.html
+++ b/index.html
@@ -4,14 +4,57 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Yanone+Kaffeesatz:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Czechitas projekt M&M</title>
   </head>
   <body>
-    <div>
-      <p class="background">Toto je náš projekt</p>
-      <a class="tlacitko" href="marketa.html"> Foto Marketa </a>
-      <a class="tlacitko" href="magda.html"> Foto Magda</a>
-    </div>
+    <header class="my">
+      <section class="hlavicka">
+        <h1 class="titulek">Menties M&M</h1>
+      </section>
+    </header>
+    <section class="o_nas">
+      <div class="magda">
+        <h2 class="mezititulek1">Magda Hlaváčová</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque
+          arcu. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus
+          quam ultricies odio, vitae placerat pede sem sit amet enim. Etiam
+          neque. Sed vel lectus. Donec odio tempus molestie, porttitor ut,
+          iaculis quis, sem. Praesent in mauris eu tortor porttitor accumsan.
+        </p>
+        <a class="tlacitko" href="magda.html"> Něco o mně</a>
+      </div>
+      <div class="marketa">
+        <h2 class="mezititulek2">Markéta Kloubková</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. In dapibus
+          augue non sapien. Phasellus rhoncus. Pellentesque arcu. Integer
+          rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies
+          odio, vitae placerat pede sem sit amet enim. Etiam neque. Sed vel
+          lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem.
+          Praesent in mauris eu tortor porttitor accumsan.
+        </p>
+        <a class="tlacitko" href="marketa.html"> Foto Marketa </a>
+      </div>
+    </section>
+    <section class="projekt">
+      <h2 class="mezititulek3">Toto je náš projekt</h2>
+      <p class="o_projektu">
+        Aplikace na vytváření vlastních memokaret k učení různých témat.
+        Uživatel si vytvoří karty ve formátu text / obrázek / mp3 / vlastní
+        audio. Možnost rozšíření pro práci ve skupině (např. učitel tvoří karty
+        pro třídu), dále možnost zveřejnění již vytvořených setů.
+      </p>
+    </section>
+
+    <footer class="kontakty">
+      Kontakty: Magda.hlavacova@gmail.com> <br />Magda & Markéta, 2021
+    </footer>
   </body>
 </html>
