nástřel strana Magda

--- a/magda.html
+++ b/magda.html
@@ -3,10 +3,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Yanone+Kaffeesatz:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <img class="Magda" src="fotka-Magda.jpg" alt="Foto Magdy" />
+    <div class="strana_magda">
+      <section class="uvod_magda">
+        <h1 class="jmeno">Magda Hlaváčová</h1>
+      </section>
+      <div class="box">
+        <section class="okno1_magda"></section>
+        <section class="okno2_magda">
+          „Vyber si práci, kterou miluješ a již žádný den v životě nebudeš muset
+          pracovat.“ Konfucius
+        </section>
+        <section class="okno3_magda">
+          <a class="tlacitko" href="magda.html"> Odkaz na Github</a><br />
+          <a class="tlacitko" href="magda.html"> Odkaz na LindketIn</a><br />
+          <a class="tlacitko" href="magda.html"> mail, telefon</a>
+        </section>
+      </div>
+      <section class="text_magda">
+        To co dělám, mě musí bavit a dávat smysl. Studovala jsem na 3. Lékařské
+        fakultě UK obor výživa a preventivní lékařství, ale ještě před koncem
+        studií jsem zběhla ke grafice a pracovala mnoho let jako grafik v
+        časopisech, naposledy Apetitu - to byla má srdcovka a zcela zde
+        vykrystalizovala má láska k vaření, pečení a dobrému jídlu. Nyní jsem na
+        kariérním rozcestí, Czechitas je mou cestou, jak grafické znalosti
+        uplatnit v digitálním světě a najít místo, kde mě bude práce zase
+        naplňovat. Volný čas trávím s rodinou, přáteli a mou border kolií Fínou.
+        Ze sportu nejraději chodím - po horách, ideálně mnoho kilometrů. Jsem
+        máma dvou puberťáků. Veselý introvert - chvíli mi trvá, než se
+        rozkoukám.<br />
+        Dlouholeté zkušenosti z tištěné grafiky bych ráda přenesla do webového
+        designu a návrhu aplikací. Mám za sebou práci na UI designu dvou
+        aplikací ve Figmě a teď se cestou DA snažím v této kariérní změně
+        pokračovat.
+      </section>
+
+      <!--     <img class="Magda" src="fotka-Marketa.jpg" alt="Foto Magdy" />
+ -->
+    </div>
+    <footer class="kontakty">
+      Kontakty: Magda.hlavacova@gmail.com> <br />Magda & Markéta, 2021
+    </footer>
   </body>
 </html>
