--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
       <div class="magda">
         <h2 class="mezititulek1">Magda Hlaváčová</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque
-          arcu. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus
-          quam ultricies odio, vitae placerat pede sem sit amet enim. Etiam
-          neque. Sed vel lectus. Donec odio tempus molestie, porttitor ut,
-          iaculis quis, sem. Praesent in mauris eu tortor porttitor accumsan.
+          Před digitální akademií jsem byla programováním zcela nepoznamenaná.
+          Teď již nikdy nebudu koukat na webové stránky tak, jako dřív :-D.
+          Nakročená vydat se novou cestou ke krásným, ale zároveň funkčním
+          designům webů a aplikací.
         </p>
         <a class="tlacitko" href="magda.html"> Něco o mně</a>
       </div>
@@ -53,8 +52,6 @@
       </p>
     </section>
 
-    <footer class="kontakty">
-      Kontakty: Magda.hlavacova@gmail.com> <br />Magda & Markéta, 2021
-    </footer>
+    <footer class="kontakty">Magda & Markéta, 2021</footer>
   </body>
 </html>
