--- a/magda.html
+++ b/magda.html
@@ -19,37 +19,49 @@
         <section class="okno1_magda"></section>
         <section class="okno2_magda">
           „Vyber si práci, kterou miluješ a již žádný den v životě nebudeš muset
-          pracovat.“ Konfucius
+          pracovat.“ <br />
+          <em>Konfucius</em>
         </section>
         <section class="okno3_magda">
-          <a class="tlacitko" href="magda.html"> Odkaz na Github</a><br />
-          <a class="tlacitko" href="magda.html"> Odkaz na LindketIn</a><br />
-          <a class="tlacitko" href="magda.html"> mail, telefon</a>
+          <h2>Odkazy</h2>
+          <a class="tlacitko" href="https://github.com/MagdaHlavacova">
+            Odkaz na Github</a
+          ><br />
+          <a
+            class="tlacitko"
+            href="https://www.linkedin.com/in/magda-hlavacova"
+          >
+            Odkaz na Linkedin</a
+          ><br />
+          <a class="tlacitko" href="mailto:magda.hlavacova@gmail.com"> mail</a>
+          <hr />
+          <a class="tlacitko" href="marketa.html"> O Markétě</a><br />
+          <a class="tlacitko" href="index.html"> O projektu</a>
         </section>
       </div>
       <section class="text_magda">
-        To co dělám, mě musí bavit a dávat smysl. Studovala jsem na 3. Lékařské
-        fakultě UK obor výživa a preventivní lékařství, ale ještě před koncem
-        studií jsem zběhla ke grafice a pracovala mnoho let jako grafik v
-        časopisech, naposledy Apetitu - to byla má srdcovka a zcela zde
-        vykrystalizovala má láska k vaření, pečení a dobrému jídlu. Nyní jsem na
-        kariérním rozcestí, Czechitas je mou cestou, jak grafické znalosti
-        uplatnit v digitálním světě a najít místo, kde mě bude práce zase
-        naplňovat. Volný čas trávím s rodinou, přáteli a mou border kolií Fínou.
-        Ze sportu nejraději chodím - po horách, ideálně mnoho kilometrů. Jsem
-        máma dvou puberťáků. Veselý introvert - chvíli mi trvá, než se
-        rozkoukám.<br />
-        Dlouholeté zkušenosti z tištěné grafiky bych ráda přenesla do webového
-        designu a návrhu aplikací. Mám za sebou práci na UI designu dvou
-        aplikací ve Figmě a teď se cestou DA snažím v této kariérní změně
-        pokračovat.
+        Studovala jsem na 3. Lékařské fakultě UK obor výživa a preventivní
+        lékařství, ale již při studiu jsem zdravotnictví podváděla s focením a
+        grafikou. <br />
+        Mnoho let jsem pracovala jako grafik v časopisech, jejichž náplň se
+        souběžně měnila podle mých životních etap. Vystřídala jsem Cosmopolitan,
+        časopis o dětech, až jsem přišla do mé srdcovky: Apetitu. Zde zcela
+        vykrystalizovala má láska k vaření, pečení a dobrému jídlu. Pochopila
+        jsem, že práce mě musí bavit, a že v tištěných médiích se již jen těžko
+        najdu. Proto jsem se rozhodla ke změně. Dlouholeté zkušenosti z tištěné
+        grafiky bych ráda přenesla do webového designu a návrhu aplikací. Mám za
+        sebou práci na UI dvou B2B appek ve Figmě, a teď se cestou DA snažím v
+        této kariérní změně pokračovat. Snažím se v IT světě najít místo, kde
+        mně bude práce zase naplňovat.
+        <br />Volný čas trávím s rodinou, přáteli a mou border kolií Fínou. Ze
+        sportu nejraději chodím - hlavně po horách, ideálně mnoho kilometrů.
+        Jsem hrdá máma dvou puberťáků, velkých sportovců, kterým většinu
+        společně tráveného aktivního času spíše jen zdálky hledím na záda :).<br />
       </section>
 
       <!--     <img class="Magda" src="fotka-Marketa.jpg" alt="Foto Magdy" />
  -->
     </div>
-    <footer class="kontakty">
-      Kontakty: Magda.hlavacova@gmail.com> <br />Magda & Markéta, 2021
-    </footer>
+    <footer class="kontakty">Magda & Markéta, 2021</footer>
   </body>
 </html>
