--- a/index.html
+++ b/index.html
@@ -15,46 +15,34 @@
   <body>
     <header class="my">
       <section class="hlavicka">
-        <h1 class="titulek">Menties M&M</h1>
+        <h1 class="titulek">Mentees M&M</h1>
       </section>
     </header>
     <section class="o_nas">
       <div class="magda">
         <h2 class="mezititulek1">Magda Hlaváčová</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque
-          arcu. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus
-          quam ultricies odio, vitae placerat pede sem sit amet enim. Etiam
-          neque. Sed vel lectus. Donec odio tempus molestie, porttitor ut,
-          iaculis quis, sem. Praesent in mauris eu tortor porttitor accumsan.
-        </p>
-        <a class="tlacitko" href="magda.html"> Něco o mně</a>
+        <p></p>
+        <a class="tlacitko" href="magda.html"> Více o Magdě</a>
       </div>
       <div class="marketa">
         <h2 class="mezititulek2">Markéta Kloubková</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. In dapibus
-          augue non sapien. Phasellus rhoncus. Pellentesque arcu. Integer
-          rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies
-          odio, vitae placerat pede sem sit amet enim. Etiam neque. Sed vel
-          lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem.
-          Praesent in mauris eu tortor porttitor accumsan.
-        </p>
-        <a class="tlacitko" href="marketa.html"> Foto Marketa </a>
+        <p></p>
+        <a class="tlacitko" href="marketa.html"> Více o Markétě </a>
       </div>
     </section>
     <section class="projekt">
-      <h2 class="mezititulek3">Toto je náš projekt</h2>
+      <h2 class="mezititulek3">Náš projekt</h2>
       <p class="o_projektu">
-        Aplikace na vytváření vlastních memokaret k učení různých témat.
-        Uživatel si vytvoří karty ve formátu text / obrázek / mp3 / vlastní
-        audio. Možnost rozšíření pro práci ve skupině (např. učitel tvoří karty
-        pro třídu), dále možnost zveřejnění již vytvořených setů.
+        Budeme vytvářet aplikaci, ve které si budete moci vytvořit vlastní
+        memokarty učení různých témat. Uživatel si vytvoří kartičky ve formátu
+        text, obrázek nebo audio.<br />Možnost rozšíření pro práci ve skupině
+        (např. učitel tvoří karty pro třídu), dále možnost zveřejnění již
+        vytvořených setů.
       </p>
     </section>
 
     <footer class="kontakty">
-      Kontakty: Magda.hlavacova@gmail.com> <br />Magda & Markéta, 2021
+      Kontakty: magda.hlavacova@gmail.com> <br />Magda & Markéta, 2021
     </footer>
   </body>
 </html>
