--- a/magda.html
+++ b/magda.html
@@ -23,7 +23,7 @@
         </section>
         <section class="okno3_magda">
           <a class="tlacitko" href="magda.html"> Odkaz na Github</a><br />
-          <a class="tlacitko" href="magda.html"> Odkaz na LindketIn</a><br />
+          <a class="tlacitko" href="magda.html"> Odkaz na LinkedIn</a><br />
           <a class="tlacitko" href="magda.html"> mail, telefon</a>
         </section>
       </div>
