--- a/marketa.html
+++ b/marketa.html
@@ -11,3 +11,47 @@
     <img class="Marketa" src="fotka-Marketa.jpg" alt="Foto Markety" />
   </body>
 </html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Yanone+Kaffeesatz:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="strana_magda">
+      <section class="uvod_magda">
+        <h1 class="jmeno">Markéta Kloubková</h1>
+      </section>
+      <div class="box">
+        <section class="okno1_marketa"></section>
+        <section class="okno2_magda"></section>
+
+        <section class="okno3_magda">
+          <a class="tlacitko" href="magda.html"> Odkaz na Github</a><br />
+          <a class="tlacitko" href="magda.html"> Odkaz na LinkedIn</a><br />
+          <a class="tlacitko" href="magda.html"> mail, telefon</a>
+        </section>
+      </div>
+      <section class="text_magda">
+        Jsem vystudovaná právnička. Víte jaký je rozdíl mezi právníkem a
+        ajťákem? Když jim zadáte naučit se telefonní seznam nazpaměť, ajťák
+        řekne, že přece něco tak nesmyslného dělat nebude a právník suše odpoví:
+        "Do kdy?"<br />
+        S tímto mindsetem jsem začala studovat Digitální akademii. Kódování byla
+        láska na první pohled, naučit se ho však není jako se naučit telefonní
+        seznam. Je to jedno velké nekončící dobrodružství.
+      </section>
+      <img class="Marketa" src="fotka-Marketa.jpg" alt="Foto Markety" />
+    </div>
+    <footer class="kontakty">
+      Kontakty: mkloubkovajancikova@gmail.com> <br />Magda & Markéta, 2021
+    </footer>
+  </body>
+</html>
