--- a/magda.html
+++ b/magda.html
@@ -16,7 +16,9 @@
         <h1 class="jmeno">Magda Hlaváčová</h1>
       </section>
       <div class="box">
-        <section class="okno1_magda"></section>
+        <section class="okno1_magda">
+          <img class="foto_magda" src="IMG/fotka-Magda.jpg" alt="Fotka Magdy" />
+        </section>
         <section class="okno2_magda">
           „Vyber si práci, kterou miluješ a již žádný den v životě nebudeš muset
           pracovat.“ <br />
