--- a/marketa.html
+++ b/marketa.html
@@ -31,9 +31,9 @@
       </section>
       <div class="box">
         <section class="okno1_marketa"></section>
-        <section class="okno2_magda"></section>
+        <section class="okno2_marketa"></section>
 
-        <section class="okno3_magda">
+        <section class="okno3_marketa">
           <a class="tlacitko" href="magda.html"> Odkaz na Github</a><br />
           <a class="tlacitko" href="magda.html"> Odkaz na LinkedIn</a><br />
           <a class="tlacitko" href="magda.html"> mail, telefon</a>
