upravy barev, kontrastu, css fotky

--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
 
         <p>
           Před digitální akademií jsem byla programováním zcela nepoznamenaná.
-          Teď již nikdy nebudu koukat na webové stránky tak, jako dřív :-D.
-          Nakročená vydat se novou cestou ke krásným, ale zároveň funkčním
-          designům webů a aplikací.
+          Teď již nikdy nebudu koukat na webové stránky tak, jako dřív. Event už
+          nikdy nebude večírek, ale událost :D. Jsem odhodlaná vydat se novou
+          cestou ke krásným, ale zároveň funkčním designům webů a aplikací.
         </p>
         <a class="tlacitko" href="magda.html"> Více o Magdě</a>
       </div>
       <div class="marketa">
         <h2 class="mezititulek2">Markéta Kloubková</h2>
         <p>
-          S Magdou jsme se daly dohromady, protože máme podobné zkušenosti s
-          učením, které chceme přenést do našeho projektu.
+          S Magdou jsme se daly dohromady, protože máme podobné zkušenosti
+          s učením, které chceme přenést do našeho projektu.
         </p>
-        <a class="tlacitko" href="marketa.html"> Více o Markétě </a>
+        <a class="tlacitko tlacitko__Marketa" href="marketa.html">
+          Více o Markétě
+        </a>
       </div>
     </section>
     <section class="projekt">
