--- a/magda.html
+++ b/magda.html
@@ -20,7 +20,7 @@
           <img class="foto_magda" src="IMG/fotka-Magda.jpg" alt="Fotka Magdy" />
         </section>
         <section class="okno2_magda">
-          „Vyber si práci, kterou miluješ a již žádný den v životě nebudeš muset
+          „Vyber si práci, kterou miluješ a již žádný den v životě nebudeš muset
           pracovat.“ <br />
           <em>Konfucius</em>
         </section>
@@ -42,23 +42,19 @@
         </section>
       </div>
       <section class="text_magda">
-        Studovala jsem na 3. Lékařské fakultě UK obor výživa a preventivní
-        lékařství, ale již při studiu jsem zdravotnictví podváděla s focením a
+        Studovala jsem na 3. Lékařské fakultě UK obor výživa a preventivní
+        lékařství, ale již při studiu jsem zdravotnictví podváděla s focením a 
         grafikou. <br />
         Mnoho let jsem pracovala jako grafik v časopisech, jejichž náplň se
         souběžně měnila podle mých životních etap. Vystřídala jsem Cosmopolitan,
-        časopis o dětech, až jsem přišla do mé srdcovky: Apetitu. Zde zcela
-        vykrystalizovala má láska k vaření, pečení a dobrému jídlu. Pochopila
-        jsem, že práce mě musí bavit, a že v tištěných médiích se již jen těžko
-        najdu. Proto jsem se rozhodla ke změně. Dlouholeté zkušenosti z tištěné
+        časopis o dětech, až jsem přišla do mé srdcovky: Apetitu. Zde zcela
+        vykrystalizovala má láska k vaření, pečení a dobrému jídlu. Pochopila
+        jsem, že práce mě musí bavit, a že v tištěných médiích se již jen těžko
+        najdu. Proto jsem se rozhodla ke změně. Dlouholeté zkušenosti z tištěné
         grafiky bych ráda přenesla do webového designu a návrhu aplikací. Mám za
-        sebou práci na UI dvou B2B appek ve Figmě, a teď se cestou DA snažím v
-        této kariérní změně pokračovat. Snažím se v IT světě najít místo, kde
+        sebou práci na UI dvou B2B appek ve Figmě, a teď se cestou DA snažím
+        v této kariérní změně pokračovat. Snažím se v IT světě najít místo, kde
         mně bude práce zase naplňovat.
-        <br />Volný čas trávím s rodinou, přáteli a mou border kolií Fínou. Ze
-        sportu nejraději chodím - hlavně po horách, ideálně mnoho kilometrů.
-        Jsem hrdá máma dvou puberťáků, velkých sportovců, kterým většinu
-        společně tráveného aktivního času spíše jen zdálky hledím na záda :).<br />
       </section>
 
       <!--     <img class="Magda" src="fotka-Marketa.jpg" alt="Foto Magdy" />
