--- a/magda.html
+++ b/magda.html
@@ -15,7 +15,7 @@
       <section class="uvod_magda">
         <h1 class="jmeno">Magda Hlaváčová</h1>
       </section>
-      <div class="box">
+      <div class="box box__magda">
         <section class="okno1_magda">
           <img class="foto_magda" src="IMG/fotka-Magda.jpg" alt="Fotka Magdy" />
         </section>
